--- a/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/src/main/webapp/WEB-INF/resources/css/main.css
@@ -29,3 +29,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.login-box {
+    text-align: center;
+}
+
+.login-container {
+    width: 40%;
+    margin: auto;
+    margin-top: 100px;
+}
